--- a/README.org
+++ b/README.org
@@ -45,7 +45,7 @@ If you prefer a video to some text, we've got you covered! For
 [[https://emacsconf.org/2019/][EmacsConf 2019]], we've created a 10 minute introductory video into the
 rationale and usability of organice.
 
-[[https://raw.githubusercontent.com/200ok-ch/organice/master/images/screenshot-introduction.png]]
+#+html: <p align="center"><a href="https://www.youtube.com/watch?v=aQKc0hcFXCk"><img src="https://raw.githubusercontent.com/200ok-ch/organice/master/images/screenshot-introduction.png"/></a></p>
 
 You can watch it on:
 
