--- a/test_helpers/fixtures/main_test_file.org
+++ b/test_helpers/fixtures/main_test_file.org
@@ -21,8 +21,8 @@ Some description content
   Relative link to [[file:../subdir][../subdir]]
   Relative link to [[file:../subdir/][../subdir/]]
   Relative link to [[file:../../foo.org][a fictitious .org file in a grand-parent directory]]
-  Relative link to [[file:../../../../too-high.org][a fictitious .org file in a too-high ancestor directory]]
-  Relative link to [[file:../../../../too-high][a too-high ancestor directory]]
+  Relative link to [[file:../../../../too-high-to-access-file.org][a fictitious .org file in a too-high ancestor directory]]
+  Relative link to [[file:../../../../too-high-to-access-directory][a too-high ancestor directory]]
   Absolute link to [[file:~/foo/bar/baz.org][a fictitious .org file in home directory]]
   Absolute link to [[file:/foo/bar/baz.org][a fictitious .org file]]
 * A header with a URL, mail address and phone number as content
