--- a/sample.org
+++ b/sample.org
@@ -422,7 +422,8 @@ conditions between clients.
 * Multiple files
 organice supports using multiple files.
 
-default behaviour:
+Default behaviour:
+
 - When you first open a file it is loaded from the backend. At this point the file is persisted to local storage. It will be loaded from there on future application starts. To ensure consistency whenever a file is opened it will be synced with the backend.
 - Agenda, Refile, Search and Task List by default show results from the currently viewed file.
 
