--- a/README.org
+++ b/README.org
@@ -60,7 +60,7 @@ You can watch it on:
 organice is a web application. You can use it from any browser. On iOS
 and Android, you can install organice to your homescreen. When
 started from there, it will run in full-screen as a Progressive Web
-Application (PWA) which will add some [[#offline_support][offline capabilities]].
+Application (PWA) which will add some [[#progressive-web-app--offline-support][offline capabilities]].
 
 First, go to the page that you want to use as your start screen when
 using organice as an app from your homescreen. This could be the
