--- a/README.org
+++ b/README.org
@@ -17,7 +17,7 @@
 
 Documentation: https://organice.200ok.ch/documentation.html
 
-Community chat: #organice on IRC [[https://freenode.net/][Freenode]], or [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]] on Matrix
+Community chat: #organice on IRC [[https://libera.chat/][Libera.Chat]], or [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]] on Matrix
 
 ** What does this project do?
 
@@ -903,7 +903,7 @@ fork. organice differs from org-web in that:
 - organice is a community driven project. See our
   - [[file:CODE_OF_CONDUCT.md][Code of conduct]]
   - [[file:CONTRIBUTING.org][Contributing guidelines]]
-  - Community chat: #organice on IRC [[https://freenode.net/][Freenode]], or [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]]
+  - Community chat: #organice on IRC [[https://libera.chat/][Libera.Chat]], or [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]] on Matrix
     on Matrix
 
 - organice has the commitment of a Swiss company (200ok llc: https://200ok.ch/)
